[tool.poetry]
name = "hub"
version = "0.1.0"
description = "Hub for managing player information, membership, etc for UPAI"
authors = ["Puneeth Chaganti <punchagan@muse-amuse.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
gunicorn = "^20.1.0"
django-ninja = "^0.22.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
black = "^23.3.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100